update requirements.txt after merging frontend and backend

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,32 @@
-black==23.3.0
 blinker==1.6.2
-click==8.1.3
+certifi==2023.7.22
+charset-normalizer==3.2.0
+click==8.1.6
 colorama==0.4.6
-flake8==6.1.0
+ffmpeg-python==0.2.0
+filelock==3.12.2
 Flask==2.3.2
-importlib-metadata==6.6.0
+future==0.18.3
+idna==3.4
 itsdangerous==2.1.2
 Jinja2==3.1.2
+llvmlite==0.40.1
 MarkupSafe==2.1.3
-mccabe==0.7.0
-mypy-extensions==1.0.0
-packaging==23.1
-pathspec==0.11.1
-platformdirs==3.6.0
-pycodestyle==2.11.0
-pyflakes==3.1.0
-tomli==2.0.1
-typing_extensions==4.6.3
+more-itertools==10.1.0
+mpmath==1.3.0
+networkx==3.1
+numba==0.57.1
+numpy==1.24.4
+openai-whisper==20230314
+PyAudio @ file:///PyAudio-0.2.13-cp311-cp311-win_amd64.whl#sha256=9f2cfa7a263134b2a6f76482f5211b77f355af32de6b599164d644ae1e5825dc
+regex==2023.8.8
+requests==2.31.0
+sympy==1.12
+tiktoken==0.3.1
+torch==2.0.1
+torchaudio==2.0.2
+tqdm==4.66.1
+typing_extensions==4.7.1
+urllib3==2.0.4
 websockets==11.0.3
-Werkzeug==2.3.4
-zipp==3.15.0
+Werkzeug==2.3.7
