--- a/app_config.ini
+++ b/app_config.ini
@@ -1,6 +1,18 @@
 [DEFAULT]
 darkmode = true
 
+; Audio Settings
+audio_channels = 1
+audio_sampleRate = 48000
+audio_voiceTimeoutMS = 1000
+audio_volumeThreshold = 1500
+
+; Whisper Model Settings
+whisper_modelSize = base
+whisper_language = en
+whisper_task = transcribe
+
+
 [user.config]
 darkmode = true
 
