html: changed 'Start Whisper' button location
The app_config.ini doesn't like cases and empty lines, removed by ConfigParser automatically

--- a/app_config.ini
+++ b/app_config.ini
@@ -1,17 +1,12 @@
 [DEFAULT]
 darkmode = true
-
-; Audio Settings
 audio_channels = 1
-audio_sampleRate = 48000
-audio_voiceTimeoutMS = 1000
-audio_volumeThreshold = 1500
-
-; Whisper Model Settings
-whisper_modelSize = base
+audio_samplerate = 48000
+audio_voicetimeoutms = 1000
+audio_volumethreshold = 1500
+whisper_modelsize = base
 whisper_language = en
 whisper_task = transcribe
-
 
 [user.config]
 darkmode = true
