config: added useGPU option

--- a/app_config.ini
+++ b/app_config.ini
@@ -4,6 +4,7 @@ audio_channels = 1
 audio_samplerate = 48000
 audio_voicetimeoutms = 1000
 audio_volumethreshold = 1500
+whisper_usegpu = false
 whisper_modelsize = base
 whisper_language = en
 whisper_task = transcribe
