feat: saving audio settings

--- a/app_config.ini
+++ b/app_config.ini
@@ -1,14 +1,31 @@
 [DEFAULT]
 darkmode = true
-audio_channels = 1
-audio_samplerate = 48000
-audio_voicetimeoutms = 1000
 audio_volumethreshold = 1500
-whisper_usegpu = false
+audio_voicetimeoutms = 1000
 whisper_modelsize = base
 whisper_language = en
 whisper_task = transcribe
+whisper_usegpu = false
+subtitle_textcolor = #ffffff
+subtitle_textsize = 48
+subtitle_textfontfamily = sans-serif
+subtitle_textfontweight = 700
+subtitle_strokecolor = #fc5892
+subtitle_strokewidth = 4
+subtitle_strokesteps = 16
 
 [user.config]
 darkmode = true
-
+audio_volumethreshold = 1500
+audio_voicetimeoutms = 1000
+whisper_modelsize = base
+whisper_language = en
+whisper_task = transcribe
+whisper_usegpu = false
+subtitle_textcolor = #ffffff
+subtitle_textsize = 48
+subtitle_textfontfamily = sans-serif
+subtitle_textfontweight = 700
+subtitle_strokecolor = #fc5892
+subtitle_strokewidth = 4
+subtitle_strokesteps = 16
