deps: update PyAudio version

--- a/requirements.txt
+++ b/requirements.txt
@@ -18,7 +18,7 @@ networkx>=3.1
 numba>=0.57.1
 numpy>=1.24.4
 openai-whisper>=20230314
-PyAudio @ file:///PyAudio-0.2.13-cp311-cp311-win_amd64.whl#sha256=9f2cfa7a263134b2a6f76482f5211b77f355af32de6b599164d644ae1e5825dc
+PyAudio>=0.2.13
 regex>=2023.8.8
 requests>=2.31.0
 sympy>=1.12
