--- a/.github/workflows/QA.yml
+++ b/.github/workflows/QA.yml
@@ -17,7 +17,7 @@ jobs:
     - name: Set up Node.js
       uses: actions/setup-node@v4
       with:
-        node-version: lts
+        node-version: 'lts/*'
 
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v5
