--- a/.github/workflows/QA.yml
+++ b/.github/workflows/QA.yml
@@ -19,15 +19,16 @@ jobs:
       with:
         node-version: 'lts/*'
 
+    - name: Install libraries
+      if: ${{  runner.os == 'Linux'  }}
+      run: sudo apt-get install -y python3-pyaudio
+
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v5
       with:
         python-version: ${{ matrix.python-version }}
-
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
+        cache: 'pip'
+      run: pip install -r requirements.txt
 
     - name: Run Flake8
       run: |
