--- a/.github/workflows/QA.yml
+++ b/.github/workflows/QA.yml
@@ -28,7 +28,7 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
         cache: 'pip'
-      run: pip install -r requirements.txt
+    - run: pip install -r requirements.txt
 
     - name: Run Flake8
       run: |
