--- a/.github/workflows/QA.yml
+++ b/.github/workflows/QA.yml
@@ -21,7 +21,7 @@ jobs:
 
     - name: Install libraries
       if: ${{  runner.os == 'Linux'  }}
-      run: sudo apt-get install -y python3-pyaudio
+      run: sudo apt-get install -y portaudio19-dev python3-dev
 
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v5
