--- a/.github/workflows/QA.yml
+++ b/.github/workflows/QA.yml
@@ -9,7 +9,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest]
-        python-version: ['3.8', '3.9', '3.10', '3.11']
+        python-version: ['3.9', '3.10', '3.11']
 
     steps:
     - uses: actions/checkout@v4
@@ -18,6 +18,9 @@ jobs:
       uses: actions/setup-node@v4
       with:
         node-version: 'lts/*'
+
+    - name: Set up npm
+      run: npm install ws
 
     - name: Install libraries
       if: ${{  runner.os == 'Linux'  }}
