cicd: send request to flask

--- a/.github/workflows/QA.yml
+++ b/.github/workflows/QA.yml
@@ -47,6 +47,7 @@ jobs:
       run: |
         flask run &
         sleep 10
+        curl http://127.0.0.1:5000/
 
     - name: Check Flask application's websocket
       run: |
