cicd: directly run the flask server

--- a/.github/workflows/QA.yml
+++ b/.github/workflows/QA.yml
@@ -45,7 +45,7 @@ jobs:
 
     - name: Run Flask application
       run: |
-        flask run &
+        python app.py &
         sleep 10
         curl http://127.0.0.1:5000/
 
