cicd: combine server spawning and testing

--- a/.github/workflows/QA.yml
+++ b/.github/workflows/QA.yml
@@ -43,12 +43,9 @@ jobs:
         pip install black
         black --check . ./backend
 
-    - name: Run Flask application
+    - name: Run and Test Flask websocket
       run: |
         python app.py &
         sleep 10
-        curl http://127.0.0.1:5000/
-
-    - name: Check Flask application's websocket
-      run: |
+        curl --head http://127.0.0.1:5000/
         node .github/workflows/test_ws.js
