CICD: init implementation (#1)
* cicd: first attempt at setting up actions

* cicd: add js test file

* cicd: change node to lts

* cicd: actually change node to lts

nobody told me it doesn't need quotation marks.

* cicd: change node-version

please make it work

* cicd: change matplotlib version

Python 3.8 doesn't have matplotlib 3.8.0

* cicd: install libraries for pyaudio on linux, and cache pip

* cicd: fix cache pip

* cicd: build pyaudio from stratch on linux

* cicd: npm install ws and remove 3.8 from python matrix

* cicd: send request to flask

* cicd: directly run the flask server

* cicd: flake8 not happy about 'match'

my bad, i forgot python 3.10 and up have 'match'

* cicd: combine server spawning and testing

* cicd: split linux and windows flask running

* cicd: extend windows flask startup wait time

* cicd: make curl retry on connrefused

Because matplotlib likes to take its time to build cache, curl will fail because flask haven't started.

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,12 @@
 !.flake8
 !pyproject.toml
 
+# CI / CD
+!.github/
+!.github/workflows
+!.github/workflows/QA.yml
+!.github/workflows/test_ws.js
+
 # Top level
 !app.py
 !app_config.ini
