--- a/.github/workflows/QA.yml
+++ b/.github/workflows/QA.yml
@@ -1,6 +1,13 @@
 name: Python Automated Test Runs
 
-on: [workflow_dispatch, push, pull_request]
+on:
+  workflow_dispatch:
+  push:
+    branches-ignore:
+      - 'docs/**'
+  pull_request:
+    branches-ignore:
+      - 'docs/**'
 
 jobs:
   build:
