feat: complete subtitles log animation implementation
Currently, if user disable log animation, it will stick to one line of history, which I think looks better.

--- a/app_config.ini
+++ b/app_config.ini
@@ -13,6 +13,8 @@ subtitle_textfontweight = 700
 subtitle_strokecolor = #fc5892
 subtitle_strokewidth = 4
 subtitle_strokesteps = 16
+subtitle_animation_enabled = false
+subtitle_loglength = 1
 
 [user.config]
 darkmode = true
@@ -29,4 +31,6 @@ subtitle_textfontweight = 700
 subtitle_strokecolor = #fc5892
 subtitle_strokewidth = 4
 subtitle_strokesteps = 16
+subtitle_animation_enabled = false
+subtitle_loglength = 1
 
